# stereo

./: CMakeLists.txt  README.md  cloud_viz.py  epipolar.xml  epipolar_calibration.cpp  extrinsic.xml  intrinsic.cpp  left_param.xml  right_param.xml  stereo.cpp  take_photo.cpp  undistortion.cpp
